# url-shortener-api

./: .env  .env.example  .gitignore  Dockerfile  README.md  fly.toml  justfile  pyproject.toml
.github/workflows/: deploy-pipeline.yml  fly-deploy.yml
.zed/: settings.json
app/: deps.py  main.py  models.py  utils.py
app/core/: config.py  db.py  security.py
app/routers/: auth.py  redirect.py  urls.py  users.py
